# colormotor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConscript  SConstruct  addon_config.mk
addons/cmx_imgui_app/src/: cm_imgui.cpp  cm_imgui.h  cm_imgui_app.cpp  cm_imgui_app.h  gfx_ui.cpp  gfx_ui.h  gfx_ui_config.h  imconfig.h  imgui.cpp  imgui_widgets.cpp  spectrum.cpp
addons/cmx_params/src/: cm_params.cpp  cm_params.h
addons/cmx_params/src/tinyxml2/: tinyxml2.cpp  tinyxml2.h
addons/pycolormotor/: CMakeLists.txt  README.md  armanpy.hpp  armanpy_1d.i  armanpy_2d.i  armanpy_3d.i  cm.i  cm.py  numpy.i  numpy_proto.h  swig.sh
addons/pycolormotor/armanpy/: armanpy.hpp  armanpy.i  armanpy_1d.i  armanpy_2d.i
addons/pycolormotor/modules/: osc.py  ui.py
addons/pycolormotor/wrappers/: py_cm.h  py_geom.h  py_gfx.h  py_math.h  py_ui.h  py_utils.h
apps/examples/basic/: CMakeLists.txt  app.h  main.cpp
apps/examples/basic/basic.xcodeproj/: project.pbxproj
libs/glfw/osx/glfw.xcodeproj/: ensta.pbxuser  ensta.perspectivev3  project.pbxproj
libs/glfw/osx/glfw.xcodeproj/xcuserdata/colormotor.xcuserdatad/xcschemes/: glfw.xcscheme  xcschememanagement.plist
libs/lzf/: lzf.cpp  lzf.h  lzfP.h
libs/stb/: CMStbImage.cpp  CMStbImage.h  cmStbImage.cpp  stb_image.h  stb_image_write.h
src/: cm.h  cmApp.h  cmAudio.h  cmConfig.h  cmCore.h  cmEngine.h  cmGeom.h  cmGfx.h  cmMath.h  cm_app.h  cm_epsfile.cpp  cm_epsfile.h  cm_geom.cpp  cm_geom.h  cm_gfx.cpp  cm_gfx.h  cm_math.cpp  cm_math.h  cm_utils.cpp  cm_utils.h  cm_vector_export.cpp  cm_vector_export.h  colormotor.h
src/app/: BitMask.h  CMAppModule.h  CMCanvas.cpp  CMCanvas.h  CMEvents.cpp  CMKeyboard.cpp  CMKeyboard.h  CMMouse.cpp  CMMouse.h  GLCanvas.cpp  GLCanvas.h  QuickGUI.cpp  QuickGUI.h  cmAppModule.h  cmCanvas.cpp  cmCanvas.h  cmEvents.cpp  cmEvents.h  cmGLFWApp.cpp  cmGLFWApp.h  cmGfxAppModule.h  cmGui.h  cmKeyboard.cpp  cmKeyboard.h  cmMouse.cpp  cmMouse.h
src/core/: Array2D.h  HashMap.h  TPtrList.h  TinyXmlObject.h  cmBuffer.cpp  cmBuffer.h  cmCoreIncludes.h  cmFileUtils.cpp  cmFileUtils.h  cmMemoryMap.cpp  cmMemoryMap.h  cmParam.cpp  cmParam.h  cmParamList.cpp  cmParamList.h  cmRTTI.cpp  cmRTTI.h  cmRefPtr.h  cmResource.cpp  cmResource.h  cmSingleton.h  cmThread.cpp  cmThread.h  cmTime.cpp  cmTime.h  cmUtils.cpp  cmUtils.h
src/core/platform/linux/: cmLinux.cpp  cmPosixThread.h
src/core/platform/osx/: CMOSX.mm  CMOSXThread.h
src/core/platform/win32/: CMWin32Thread.h
src/engine/: engineIncludes.h
src/engine/effects/: Accumulator.cpp  Accumulator.h  Blur.cpp  Blur.h  Downsample.cpp  Downsample.h  Effect.h  Glow.cpp  Glow.h  ShaderEffect.cpp  ShaderEffect.h  Threshold.cpp  Threshold.h
src/engine/effects/shaders/: psAccum.h  psBloom.h  psBlurH.h  psBlurV.h  psGlow.h  psRamp.h  psThresh.h  shaderUtils.h  vsQuad.h  vsQuad2.h
src/engine/renderSys/: AnimCache.cpp  AnimCache.h  AnimSys.h  Animation.cpp  Animation.h  Camera.cpp  Camera.h  DefaultMaterial.cpp  DefaultMaterial.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshAdjacency.cpp  MeshAdjacency.h  Node.cpp  Node.h  RenderChunk.cpp  RenderChunk.h  RenderSys.cpp  RenderSys.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  RunningSkeleton.cpp  RunningSkeleton.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  ShadowMesh.cpp  ShadowMesh.h  Skeleton.h  SkeletonAnimInstance.h  SkeletonAnimSource.h  SkeletonAnimSystem.cpp  (+4 more)
src/engine/renderSys/shaders/: ambientAndDiffuse.h  ambientAndDiffuseTex.h  ambientPass.h  diffusePass.h  diffusePassTex.h  shadowVolume.h  weird1.h
src/engine/renderSys/utils/: HalfEdgeCm.cpp  HalfEdgeCm.h
src/geom/: EpsFile.cpp  EpsFile.h  Image.cpp  Image.h  Path2d.cpp  Path2d.h  PolyClipper.cpp  PolyClipper.h  Shape.cpp  Shape.h  Shape2d.cpp  Shape2d.h  TriMesh.cpp  TriMesh.h  Triangulator.cpp  Triangulator.h  cmGeomGfx.cpp  cmGeomGfx.h
src/geom/cvGabor/: cvGabor.cpp  cvGabor.h
src/geom/libtess2/: geom.c  priorityq.c  sweep.c  tess.c
src/gfx/: CMGeometryUtils.cpp  CMGeometryUtils.h  CMGfxUtils.h  cmBufferUtils.h  cmFont.cpp  cmFont.h  cmGL.cpp  cmGL.h  cmGLInternal.h  cmGeometry.cpp  cmGeometry.h  cmGeometryDrawer.cpp  cmGeometryDrawer.h  cmGeometryUtils.cpp  cmGeometryUtils.h  cmGfxIncludes.h  cmGfxObject.h  cmGfxUtils.cpp  cmGfxUtils.h  cmHardwareBuffer.h  cmIndexBuffer.cpp  cmIndexBuffer.h  cmPixelFuncs.h  cmQuad.cpp  cmQuad.h  cmRenderTarget.cpp  cmRenderTarget.h  cmShader.cpp  cmShader.h  cmTexture.cpp  cmTexture.h  cmVertexBuffer.cpp  cmVertexBuffer.h  cmVertexFormat.cpp  cmVertexFormat.h  font_uni9.h  stb_truetype.h
src/math/: CMArcBall.cpp  CMArcBall.h  CMMathUtils.h  CMMatrix4x4.h  CMPlane.h  cmAABox.h  cmArcBall.cpp  cmArcBall.h  cmColor.h  cmFrustum.cpp  cmFrustum.h  cmHomography.cpp  cmHomography.h  cmMathDefs.h  cmMathIncludes.h  cmMathUtils.cpp  cmMathUtils.h  cmMatrix3x3.h  cmMatrix4x4.h  cmNumeric.cpp  cmNumeric.h  cmPerlin.cpp  cmPerlin.h  cmPlane.h  cmQuat.h  cmRay.cpp  cmRay.h  cmRect.h  cmRect3D.h  cmTransform.cpp  cmTransform.h  cmTriangle2D.h  cmVec2.h  cmVec3.h  cmVec4.h  cmVector.h
src/platform/: cm_utils_linux.cpp  cm_utils_osx.mm  cm_utils_windows.cpp
